# remember-to-stand

./: Cargo.toml  LICENSE  README.md  make.sh
.github/workflows/: build.yml
src/: main.rs
