[package]
name = "remember-to-stand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.5.6"
tray-item = "0.7.1"
rodio = "0.16.0"
home = "0.5.3"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = {version = "1.0.68"}